fix header desktop collapse

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -468,4 +468,9 @@
     top: 100%;
     left: 0;
   }
+
+  .daily-help {
+    top: 0;
+    right: 0;
+  }
 }
